# MPP-language-blender

./: .gitignore  META  Makefile  Makefile.opam  README.md  _oasis  _tags  configure  descr  documentation.md  dune-project  ideas_draft.md  mpp.opam  opam  setup.ml  specs.md  status.md  technical_requirements.md  what_is_mpp.tex
.github/workflows/: test.yml
doc/: README.md  user_documentation.md
examples/: using-ocaml-as-a-preprocessor-with-mpp.md
examples/templating/: data.mpp  example.md.mpp
implementation/: README.md  use_documentation.md
opam/: opam
snapshots/: MPP-20130619.tgz  MPP-snapshot-20130619-215816.tgz  MPP-snapshot-20130620-142846.tgz  MPP-snapshot-20130620-170258.tgz  Makefile  cmd.txt
src/: Makefile  README.md  Readme.md  dune  mpp.ml  mpp_actions.ml  mpp_charset.ml  mpp_charstream.ml  mpp_conditions.ml  mpp_core.ml  mpp_init.ml  mpp_libload.ml  mpp_main.ml  mpp_ocaml_toplevel_error_formatting.ml  mpp_out.ml  mpp_stringmap.ml  mpp_variables.ml  what_is_mpp.tex
src/lib/fragment/: Makefile  README.md  libmpp_fragment.ml  mpp_tool_fragment.ml  mpplib_fragment.ml  old_fragment.ml
src/lib/markdown/: md_lexer.ml
src/lib/ocamltohtml/: Makefile  mpp_based_version.ml  ocamltohtml_lexer.mll  ocamltohtml_main.ml
src/lib/templating/: README.md
testing/: Makefile  f1-0.run  f11-2.run  f2-0.run  f2-2.run  f2.mpp  f2.run  f2.snl.expected  f3-0.run  f4.run  f5-0.run  f6-0.run  f6-2.run  f6-3.run  f7.run  f8-0.run  f8-2.run  f9-0.run  f9.run  g0-0.run  g0-2.run  g0-3.run  g1-0.run  g1-3.run  if-0.run  if-4.run  if-5.run  if-6.run  if-7.run  if-8.run  if-9.run  if-A.run  o-0.run  t-0.run
