SRC := mpp_actions.ml mpp_charset.ml mpp_charstream.ml mpp_core.ml mpp_init.ml mpp_load.ml mpp_main.ml mpp_out.ml mpp_stringmap.ml
MODULES := $(basename ${SRC})
CMOS := $(addsuffix .cmo, ${MODULES})
CMXS := $(addsuffix .cmx, ${MODULES})
CMIS := $(addsuffix .cmi, ${MODULES})
OBJS := ${CMOS} ${CMXS} ${CMIS}

build:
	cd src && make Makefile.depend mpp && cp mpp ..

install:
	mkdir -p ${PREFIX}/lib/mpp/
	ocamlfind install -destdir ${PREFIX}/lib mpp META
	cd src && make mpp.cma mpp.cmxa
	cp $(addprefix src/, mpp.cma mpp.cmxa ${CMIS}) ${PREFIX}/lib/mpp/
#	cp $+ ${PREFIX}/lib/mpp/
	cp mpp ${PREFIX}/bin/

uninstall:
	ocamlfind remove -destdir ${PREFIX}/lib mpp
#	rm -f ${PREFIX}/lib/mpp/mpp.cm{a,xa}
	rm -fr ${PREFIX}/lib/mpp
	rm -f ${PREFIX}/bin/mpp

include Makefile.prefix
