opam-version: "2.0"
name: "mpp"
maintainer: "Philippe Wang <philippe.wang@gmail.com>"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/ocaml/MPP-language-blender"
dev-repo: "git+https://github.com/ocaml/MPP-language-blender.git"
bug-reports: "https://github.com/ocaml/MPP-language-blender/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>"1.11.0"}
  "stdlib-shims"
  "camlp-streams"
]
synopsis: "A preprocessor meant to blend languages"
description: """
MPP is a simple preprocessor with a syntax you may customize
to match your needs.

MPP is also a meta processor that is meant to bring any programming
language to the preprocessing level. You can easily use OCaml, or
many other programming languages, as a preprocessor language for any
text-based document."""
