(library
  (name mpp)
  (public_name mpp)
  (libraries stdlib-shims camlp-streams)
  (modules mpp_charset mpp_charstream mpp_out mpp_stringmap mpp_actions mpp_init mpp_core mpp_load)
  (wrapped false))

(executable
  (name mpp)
  (public_name mpp)
  (modules mpp)
  (libraries stdlib-shims camlp-streams mpp))
